		-[Core] Calling Verify() will now standard do diagnostic analysis (fixes #10).
		-[Core] Class constraint "where TService : class" added to GetAllInstances<TService>() method.
		-[LifetimeScoping] Made the LifetimeScope class internal (fixes #12).
		-[LifetimeScoping] Removed SimpleInjectorLifetimeScopeExtensions.EnableLifetimeScoping method (fixes #12).
		-[Wcf] Made the WcfOperationScope class internal (fixes #12).
		-[Wcf] Removed the SimpleInjectorWcfExtensions.EnablePerWcfOperationLifestyle method (fixes #12).
		-[Web] Removed the SimpleInjectorWebExtensions.RegisterForDisposal method (fixes #12).
		-[Mvc] Removed the SimpleInjectorMvcExtensions.RegisterMvcAttributeFilterProvider method (fixes #12).
		-[WebApi] Removed the SimpleInjectorWebApiExtensions.RegisterWebApiFilterProvider method (fixes #12).

	Bug fixes:
		-[Core] Registering a Func<object> using UnregisteredTypeEventArgs.Register(Func<object>) caused the
		 Diagnostic system to throw a NullRefernceException (fixes #49).

	Project Changes:
		-Removed Common Service Locator adapter (fixes #26).


Version 2.8.1 (v2.8.1 RTM) 2015-05-05

	Improvements/Changes:
		-[WebApi] New overloaded constructor added to the SimpleInjectorWebApiDependencyResolver to allow
		 falling back on the old scoping behavior, a change that is described in work item 21015 (work item 35).


Version 2.8 (v2.8.0 RTM) 2015-05-02

	New Features:
		-[Core] Container.IsVerifying property added to allow checking if the container is currently verifying
		 its configuration (work item 21014).
		-[Core] Nested types in exception messages are now displayed with a dot instead of a + sign, as C#
		 developers are used to. (work item 21011).
		-[Core/Diagnostics] Diagnostic warnings can now be suppressed per individual registration, by calling
		 Registration.SuppressDiagnosticWarning() (work item 21016).
		-[Core/Diagnostics] 'Ambiguous Lifestyles' diagnostic warning added (work item 20997).